// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background gradient render background gradient with custom style 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": undefined,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    style={{}}
  >
    <RNLinearGradient
      angle={0}
      borderRadii={
        [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ]
      }
      colors={
        [
          -1,
          -16777216,
        ]
      }
      endPoint={
        {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={
        [
          NaN,
          NaN,
        ]
      }
      startPoint={
        {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      useAngle={true}
    />
    <Text>
      Test
    </Text>
  </View>
</View>
`;

exports[`Background gradient render background gradient with one color 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": undefined,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    style={{}}
  >
    <RNLinearGradient
      angle={0}
      borderRadii={
        [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ]
      }
      colors={
        [
          -1,
          -1,
        ]
      }
      endPoint={
        {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={
        [
          0,
          0,
        ]
      }
      startPoint={
        {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      useAngle={true}
    />
    <Text>
      Test
    </Text>
  </View>
</View>
`;

exports[`Background gradient render correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": undefined,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    style={{}}
  >
    <RNLinearGradient
      angle={0}
      borderRadii={
        [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ]
      }
      colors={
        [
          -1,
          -16777216,
        ]
      }
      endPoint={
        {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={
        [
          0,
          1,
        ]
      }
      startPoint={
        {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      useAngle={true}
    />
    <Text>
      Test
    </Text>
  </View>
</View>
`;

exports[`Background gradient render with undefined angle 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": undefined,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    style={{}}
  >
    <RNLinearGradient
      angle={0}
      borderRadii={
        [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ]
      }
      colors={
        [
          -1,
          -16777216,
        ]
      }
      endPoint={
        {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={
        [
          0,
          1,
        ]
      }
      startPoint={
        {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      useAngle={true}
    />
    <Text>
      Test
    </Text>
  </View>
</View>
`;

exports[`Background gradient render with undefined opacity 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": undefined,
      "opacity": 1,
    }
  }
  testID="test"
>
  <View
    style={{}}
  >
    <RNLinearGradient
      angle={0}
      borderRadii={
        [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ]
      }
      colors={
        [
          -1,
          -16777216,
        ]
      }
      endPoint={
        {
          "x": 0.5,
          "y": 1,
        }
      }
      locations={
        [
          0,
          1,
        ]
      }
      startPoint={
        {
          "x": 0.5,
          "y": 0,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      useAngle={true}
    />
    <Text>
      Test
    </Text>
  </View>
</View>
`;
